--- a/blazor-interactive-auto-call-api-main/ExternalAPI/appsettings.json
+++ b/blazor-interactive-auto-call-api-main/ExternalAPI/appsettings.json
@@ -9,9 +9,7 @@
   "Authentication": {
     "Schemes": {
       "Bearer": {
-        "Authority": "https://YOUR_AUTH0_DOMAIN",
-        "ValidAudiences": [ "YOUR_AUDIENCE" ],
-        "ValidIssuer": "YOUR_AUTH0_DOMAIN"
+        "Authority": "https://dev-e4iprbhb87c1sty7.us.auth0.com"
       }
     }
   }
