cambios con los formularios

--- a/blazor-HTM-CSS-javascript/BlazorAppHTML/BlazorAppHTML.csproj
+++ b/blazor-HTM-CSS-javascript/BlazorAppHTML/BlazorAppHTML.csproj
@@ -1,9 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\MiForm.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\MiForm.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\MiForm.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\MiForm.razor" />
+  </ItemGroup>
 
 </Project>
