--- a/BlazorEbi7EF/BlazorEbi90.Web/BlazorEbi8.Web.Client/BlazorEbi9.Web.Client.csproj
+++ b/BlazorEbi7EF/BlazorEbi90.Web/BlazorEbi8.Web.Client/BlazorEbi9.Web.Client.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
@@ -9,13 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BlazorEbi7.Data\BlazorEbi7.Data.csproj" />
-    <ProjectReference Include="..\..\BlazorEbi7.Model\BlazorEbi7.Model.csproj" />
-    <ProjectReference Include="..\..\BlazorEbi7.RestfullCore\BlazorEbi7.RestfullCore.csproj" />
+    <ProjectReference Include="..\..\BlazorEbi9.Data\BlazorEbi9.Data.csproj" />
+    <ProjectReference Include="..\..\BlazorEbi9.Model\BlazorEbi9.Model.csproj" />
+    <ProjectReference Include="..\..\BlazorEbi9.RestfullCore\BlazorEbi9.RestfullCore.csproj" />
   </ItemGroup>
 
 </Project>
