--- a/BlazorEbi9EF/BlazorEbi9.ServerBlazorise/BlazorEbi9.ServerBlazorise.csproj
+++ b/BlazorEbi9EF/BlazorEbi9.ServerBlazorise/BlazorEbi9.ServerBlazorise.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise" Version="1.7.0" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.7.0" />
     <PackageReference Include="Blazorise.DataGrid" Version="1.7.0" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.0" />
