funciona la api protegida en swagger !!!

--- a/MinimalAPI/minimalapp/appsettings.Development.json
+++ b/MinimalAPI/minimalapp/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "SecretKey": "mi-clave-secrecta-que-tiene-muchos-caracteres", // 100 char
+    "Issuer": "http://localhost:5063"
   }
+
 }
