--- a/MinimalAPI/minimalapp/appsettings.json
+++ b/MinimalAPI/minimalapp/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "SecretKey": "mi-clave-secrecta-que-tiene-muchos-caracteres", // 100 char
+    "Issuer": "http://localhost:5063"
+  }
+  
 }
