--- a/MinimalAPI/WebAssemblyAPITest/WebAssemblyAPITest/appsettings.json
+++ b/MinimalAPI/WebAssemblyAPITest/WebAssemblyAPITest/appsettings.json
@@ -6,10 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-
-  "Jwt": {
-    "SecretKey": "mi-clave-secrecta-que-tiene-muchos-caracteres", // 100 char
-    "Issuer": "https://localhost:7041"
-  }
-  
+  "BaseAddress": "https://localhost:7041"
 }
