todo funciona bien .. server y cliente con apis y cookies

--- a/MinimalAPI/WebAssemblyAPITest/WebAssemblyAPITest.Client/WebAssemblyAPITest.Client.csproj
+++ b/MinimalAPI/WebAssemblyAPITest/WebAssemblyAPITest.Client/WebAssemblyAPITest.Client.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CookieBearerTokenHandler.cs" />
+    <Content Remove="Routes.razor" />
   </ItemGroup>
 
   <ItemGroup>
