--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/PasoParametrosBlazor.Client.csproj
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/PasoParametrosBlazor.Client.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\LibreriaCompartida\LibreriaCompartida.csproj" />
+  </ItemGroup>
+
 </Project>
