--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.csproj
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\LibreriaCompartida\LibreriaCompartida.csproj" />
     <ProjectReference Include="..\PasoParametrosBlazor.Client\PasoParametrosBlazor.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.10" />
   </ItemGroup>
