--- a/BlazorEbi9EF/BlazorEbi9.Api/BlazorEbi9.Api.csproj
+++ b/BlazorEbi9EF/BlazorEbi9.Api/BlazorEbi9.Api.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 
