--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/PasoParametrosBlazor.Client.csproj
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/PasoParametrosBlazor.Client.csproj
@@ -9,11 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.10" />
-  </ItemGroup>
-
-  <ItemGroup>
-   <ProjectReference Include="..\..\LibreriaCompartida\LibreriaCompartida.csproj" />
   </ItemGroup>
 
 </Project>
