--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.csproj
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,12 +8,11 @@
 
   <ItemGroup>
 
-    <ProjectReference Include="..\..\LibreriaCompartida\LibreriaCompartida.csproj" />
-
     <ProjectReference Include="..\PasoParametrosBlazor.Client\PasoParametrosBlazor.Client.csproj" />
+
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.10" />
-    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
   </ItemGroup>
 
 </Project>
