cambios para soportar tenent

--- a/BlazorEbi9EF/BlazorEbi9.Server/appsettings.json
+++ b/BlazorEbi9EF/BlazorEbi9.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DataProvider": "Restful", //"SqlServer" //SqLite
+  "DataProvider":  "SqLite", // "Restful", //"SqlServer" //SqLite
   "ConnectionStrings": {
     "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=MiEbi9Db; AttachDbFilename=c:\\temp\\midb.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\miSqLItedb.db ",
