--- a/BlazorAppEFTenant/BlazorAppEFTenant/BlazorAppEFTenant.csproj
+++ b/BlazorAppEFTenant/BlazorAppEFTenant/BlazorAppEFTenant.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\DataBase\DataBase.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Componentes\" />
+  </ItemGroup>
+
 </Project>
