--- a/BlazorAppEFTenant/BlazorAppEFTenant/BlazorAppEFTenant.csproj
+++ b/BlazorAppEFTenant/BlazorAppEFTenant/BlazorAppEFTenant.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,15 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Components\Componentes\**" />
+    <Content Remove="Components\Componentes\**" />
+    <EmbeddedResource Remove="Components\Componentes\**" />
+    <None Remove="Components\Componentes\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataBase\DataBase.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Components\Componentes\" />
   </ItemGroup>
 
 </Project>
