--- a/BlazorAppEFTenant/BlazorAppEFTenant/appsettings.json
+++ b/BlazorAppEFTenant/BlazorAppEFTenant/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataProvider": "SqlServer", // "Restful", //"SqlServer" //SqLite
+  "ConnectionStrings": {
+    "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\miSqLItedb.db ",
+    "UrlApi": "https://localhost:5001/api/"
+
+  }
 }
