--- a/BlazorAppEFTenant/DataBase/DataBase.csproj
+++ b/BlazorAppEFTenant/DataBase/DataBase.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Genericos\MyDbContextFactory.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
