--- a/BlazorAppEFTenant/BlazorAppEFTenant/appsettings.Development.json
+++ b/BlazorAppEFTenant/BlazorAppEFTenant/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "DataProvider": "SqlServer", // "Restful", //"SqlServer" //SqLite
+  "ConnectionStrings": {
+    "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=Usuarios; AttachDbFilename=c:\\temp\\UsuariosSqlServer.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\UsuariosSqLitedb.db ",
+    "UrlApi": "https://localhost:5001/api/"
+
   }
 }
