--- a/BlazorAppEFTenant/DataBase/DataBase.csproj
+++ b/BlazorAppEFTenant/DataBase/DataBase.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
