Todo funciona excepto InMemory

--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
@@ -6,10 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "DataProvider": "SqlServer", // "Restful", //"SqlServer" //SqLite
+  "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
   "ConnectionStrings": {
-    "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqLiteDbContext": "data source = c:\\temp\\miSqLItedb.db ",
+    "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
+    "InMemoryDbContext": "MemoryDb",
     "UrlApi": "https://localhost:5001/api/"
 
   }
