--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
@@ -6,10 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "DataProvider": "SqlServer", // "Restful", //"SqlServer" //SqLite
+  "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
   "ConnectionStrings": {
-    "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=Usuarios; AttachDbFilename=c:\\temp\\UsuariosSqlServer.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqLiteDbContext": "data source = c:\\temp\\UsuariosSqLitedb.db ",
+    "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva3; AttachDbFilename=c:\\temp\\Nueva3.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite3.db",
+    "InMemoryDbContext": "MemoryDb",
     "UrlApi": "https://localhost:5001/api/"
 
   }
