--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
@@ -5,13 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DetailedError": true,
   "AllowedHosts": "*",
   "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
   "ConnectionStrings": {
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
     "InMemoryDbContext": "MemoryDb",
-    "UrlApi": "https://localhost:5001/api/"
+    "UrlApi": "https://localhost:7013/"
 
   }
 }
