--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/BlazorAppEFTenant.Client.csproj
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/BlazorAppEFTenant.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.10" />
   </ItemGroup>
 
