liado con los tokens ...

--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/BlazorAppEFTenant.csproj
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/BlazorAppEFTenant.csproj
@@ -24,11 +24,14 @@
     <ProjectReference Include="..\..\DataBase\DataBase.csproj" />
     <ProjectReference Include="..\NewTenantApp.Client\BlazorAppEFTenant.Client.csproj" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
