--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
@@ -14,5 +14,9 @@
     "InMemoryDbContext": "MemoryDb",
     "UrlApi": "https://localhost:7013/"
 
+  },
+  "Jwt": {
+    "SecretKey": "mi-clave-secrecta-que-tiene-muchos-caracteres", // 100 char
+    "Issuer": "https://localhost:7013/"
   }
 }
