ufffffffffff  me he pasado de la ralla !!

--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.Development.json
@@ -16,7 +16,8 @@
 
   },
   "Jwt": {
-    "SecretKey": "mi-clave-secrecta-que-tiene-muchos-caracteres", // 100 char
-    "Issuer": "https://localhost:7013/"
+    "Key": "clave-super-secreta-mas-larga-que-16-caracteres",
+    "Issuer": "https://localhost:7013", // tu API o auth server
+    "Audience": "https://localhost:7013" // la API que va a aceptar el token
   }
 }
