--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/appsettings.json
@@ -14,5 +14,10 @@
     "InMemoryDbContext": "MemoryDb",
     "UrlApi": "https://localhost:7013/"
 
+  },
+  "Jwt": {
+    "Key": "clave-super-secreta-mas-larga-que-16-caracteres",
+    "Issuer": "https://localhost:7013", // tu API o auth server
+    "Audience": "https://localhost:7013" // la API que va a aceptar el token
   }
 }
