--- a/BlazorAppEFTenant/DataBase/DataBase.csproj
+++ b/BlazorAppEFTenant/DataBase/DataBase.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
