--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorSeguridad2026-9db0666f-74b2-46cb-bb1c-ca9ed198790c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
