--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0" />
   </ItemGroup>
