--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
@@ -1,8 +1,24 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  {
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "DetailedError": true,
+    "AllowedHosts": "*",
+    "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-2;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
+      "InMemoryDbContext": "MemoryDb",
+      "UrlApi": "https://localhost:7013/"
+
+    },
+    "Jwt": {
+      "Key": "clave-super-secreta-mas-larga-que-16-caracteres",
+      "Issuer": "https://localhost:7013", // tu API o auth server
+      "Audience": "https://localhost:7013" // la API que va a aceptar el token
     }
   }
-}
