--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Compile Remove="ContextProvider.cs" />
+    <Compile Remove="TokenService.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
