--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/wwwroot/appsettings.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/wwwroot/appsettings.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DetailedError": true,
+  "AllowedHosts": "*",
+  "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
+  "TenantId": 0,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-2;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
+    "InMemoryDbContext": "MemoryDb",
+    "ConnectionMode": "Ef",
+    "UrlApi": "https://localhost:7013/"
+
+  },
+  "Jwt": {
+    "Key": "clave-super-secreta-mas-larga-que-16-caracteres",
+    "Issuer": "https://localhost:7013", // tu API o auth server
+    "Audience": "https://localhost:7013" // la API que va a aceptar el token
   }
 }
