que bien le he aplicado los tenant al la seguridad de .net .. !   oleeeee!!!

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
@@ -8,12 +8,15 @@
   "DetailedError": true,
   "AllowedHosts": "*",
   "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
+  "TenantId": 1,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-2;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-4;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
     "InMemoryDbContext": "MemoryDb",
-    "UrlApi": "https://localhost:7013/"
+    "UrlApi": "https://localhost:7013/",
+    "ApiName": "ApiRest",
+    "ConnectionMode": "Ef"
 
   },
   "Jwt": {
