--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "DetailedError": true,
   "AllowedHosts": "*",
-  "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
-  "TenantId": 0,
+  "DataProvider": "SqLite",  //"SqlServer" //SqLite
+  "TenantId": 1,
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-4;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
