--- a/BlazorSeguridad2026/BlazorSeguridad2026/DataBase/Shares.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/DataBase/Shares.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0">
       <PrivateAssets>all</PrivateAssets>
