--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
@@ -10,9 +10,9 @@
   "DataProvider": "SqLite",  //"SqlServer" //SqLite
   "TenantId": 1,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-4;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva2; AttachDbFilename=c:\\temp\\Nueva2.db ;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite2.db",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-5;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva5; AttachDbFilename=c:\\temp\\Nueva5.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite5.db",
     "InMemoryDbContext": "MemoryDb",
     "ConnectionMode": "Ef",
     "UrlApi": "https://localhost:7013/",
