--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorSeguridad2026.Client\BlazorSeguridad2026.Client.csproj" />
+    <ProjectReference Include="..\BlazorSeguridad2026.Data\BlazorSeguridad2026.Data.csproj" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
