ES POSIBLE QUE FUNCIONE TODO TODO TODO
Añade ApplicationDbContext multitenant para Identity

- Nuevo ApplicationDbContext para usuarios/roles con soporte multitenant y filtro por TenantId.
- Migraciones iniciales para tablas Identity (AspNetUsers, AspNetRoles, etc.) en App.mdf.
- Program.cs: Identity ahora usa ApplicationDbContext; factoría e interceptor multitenant añadidos.
- Nuevas cadenas de conexión en appsettings; TenantId actualizado en desarrollo.
- Servicios y páginas de usuarios/roles forzados a usar ApplicationDbContext.
- Infraestructura multitenant mejorada: nueva propiedad ApplyTenantFilter y renombrado de Estado a Status.
- Soporte de ApplicationDbContext en GenericRepositoryFactory y UnitOfWorkFactory.
- Mejoras de robustez y control de nulos en servicios y componentes relacionados.

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.json
@@ -10,7 +10,7 @@
   "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
   "TenantId": 0,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-5;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=App; AttachDbFilename=c:\\temp\\App.mdf;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva5; AttachDbFilename=c:\\temp\\Nueva5.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite5.db",
     "InMemoryDbContext": "MemoryDb",
