--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/appsettings.Development.json
@@ -8,9 +8,9 @@
   "DetailedError": true,
   "AllowedHosts": "*",
   "DataProvider": "SqLite",  //"SqlServer" //SqLite
-  "TenantId": 1,
+  "TenantId": 5,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-5;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=App; AttachDbFilename=c:\\temp\\App.mdf;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva5; AttachDbFilename=c:\\temp\\Nueva5.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite5.db",
     "InMemoryDbContext": "MemoryDb",
