--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/BlazorSeguridad2026.Data.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/BlazorSeguridad2026.Data.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BibliotecaMinima2026\BibliotecaMinima2026.csproj" />
     <ProjectReference Include="..\..\BlazorSeguridad2026.Seguridad\BlazorSeguridad2026.Base.csproj" />
   </ItemGroup>
 
