DESDE CERO FUNCIONANDO PERFECTAMENTE

--- a/BlazorSeguridad2026/BibliotecaContextosDb/appsettings.json
+++ b/BlazorSeguridad2026/BibliotecaContextosDb/appsettings.json
@@ -7,16 +7,16 @@
   },
   "DetailedError": true,
   "AllowedHosts": "*",
-  "DataProvider": "SqLite",  //"SqlServer" //SqLite
-  "TenantId": 5,
+  "DataProvider": "SqLite", // "Restful", //"SqlServer" //SqLite
+  "TenantId": 0,
   "ConnectionStrings": {
     "ApplicationBaseDbContext": "Server=(localdb)\\mssqllocaldb;Database=App; AttachDbFilename=c:\\temp\\App.mdf;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlServerDbContext": "Server=(localdb)\\mssqllocaldb;Database=Nueva5; AttachDbFilename=c:\\temp\\Nueva5.mdf ;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqLiteDbContext": "data source = c:\\temp\\NuevaSqlite5.db",
     "InMemoryDbContext": "MemoryDb",
-    "ConnectionMode": "Ef",
     "UrlApi": "https://localhost:7013/",
-    "ApiName": "ApiRest"
+    "ApiName": "ApiRest",
+    "ConnectionMode": "Ef"
 
   },
   "Jwt": {
