--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/BlazorSeguridad2026.Base.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/BlazorSeguridad2026.Base.csproj
@@ -13,6 +13,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+		<PackageReference Include="BootstrapBlazor" Version="10.0.0" />
+		<PackageReference Include="BootstrapBlazor.FontAwesome" Version="10.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
