--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="BootstrapBlazor" Version="10.0.0" />
+    <PackageReference Include="BootstrapBlazor.FontAwesome" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0" />
