--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/BlazorSeguridad2026.Client.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+	<PropertyGroup>
+		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+	</PropertyGroup>
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
